--- a/web/tdsweb.css
+++ b/web/tdsweb.css
@@ -23,12 +23,18 @@ body {
 #query {
     width: 50vw;
     margin-left: 0.5em;
+    display: flex;
+    flex-direction: column;
 }
 
 #query textarea {
     width: 100%;
     height: 100%;
     resize: none;
+}
+
+#query button {
+    width: 3em;
 }
 
 #messages {
